Fixed overflowing issue on home page

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -136,7 +136,8 @@
 
 		position: absolute;
 		min-height: 100%;
-		top: 115px;
+		top: 0;
+		padding-top: 15%;
 
 		left: 46.5%;
 		width: 45.8%;
